--- a/src/main/resources/templates/fragments/allegatiext.html
+++ b/src/main/resources/templates/fragments/allegatiext.html
@@ -77,6 +77,8 @@
 					<div class="" th:if="${__${wrapper}__.__${propertyName}__.new}"><div class="danger" th:text="#{label.allegato_non_inserito}"></div></div>
 					<div th:if="${__${wrapper}__.mappa[__${idField}__]?.modificatoInIntegrazione == false and
 						__${wrapper}__.mappa[__${idField}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+					<div th:if="${__${wrapper}__.mappa[__${idField}__]?.modificatoInIntegrazione == true and
+						checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_dal_provider}"></div>
 	            </div>
 	            <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 					<div class="radio">
