--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -94,6 +94,8 @@
 			              			<div th:text="${providerWrapper.provider.tipoOrganizzatore.nome}"></div>
 			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}__]?.modificatoInIntegrazione == false and
 			              				providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}__]?.modificatoInIntegrazione == true and
+			              				checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_dal_provider}"></div>
 		                    	</div>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
@@ -156,6 +158,8 @@
 			              			<div th:text="${providerWrapper.provider.denominazioneLegale}"></div>
 			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}__]?.modificatoInIntegrazione == false and
 			              				providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}__]?.modificatoInIntegrazione == true and
+			              				checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_provider}"></div>
 		                    	</div>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
@@ -240,6 +244,8 @@
 			              			<div th:text="${providerWrapper.provider.partitaIva != null ? providerWrapper.provider.partitaIva : 'valore non inserito'}" th:class="${providerWrapper.provider.partitaIva == null ? 'red' : ''}"></div>
 			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')}__]?.modificatoInIntegrazione == false and
 			              				providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')}__]?.modificatoInIntegrazione == true and
+			              				checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_dal_provider}"></div>
 		                    	</div>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
@@ -303,6 +309,8 @@
 			              			<div th:text="${providerWrapper.provider.codiceFiscale}"></div>
 			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.codiceFiscale')}__]?.modificatoInIntegrazione == false and
 			              				providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.codiceFiscale')}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.codiceFiscale')}__]?.modificatoInIntegrazione == true and
+			              				checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_dal_provider}"></div>
 		                    	</div>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
@@ -379,6 +387,8 @@
 			              			<div th:text="${providerWrapper.provider.ragioneSociale}"></div>
 			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.ragioneSociale')}__]?.modificatoInIntegrazione == false and
 			              				providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.ragioneSociale')}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.ragioneSociale')}__]?.modificatoInIntegrazione == true and
+			              				checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_dal_provider}"></div>
 		                    	</div>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
@@ -441,6 +451,8 @@
 			              			<div th:text="${providerWrapper.provider.emailStruttura}"></div>
 			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.emailStruttura')}__]?.modificatoInIntegrazione == false and
 			              				providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.emailStruttura')}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.emailStruttura')}__]?.modificatoInIntegrazione == true and
+			              				checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_dal_provider}"></div>
 		                    	</div>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
@@ -514,6 +526,8 @@
 			              			<div th:text="${providerWrapper.provider.naturaOrganizzazione}"></div>
 			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.naturaOrganizzazione')}__]?.modificatoInIntegrazione == false and
 			              				providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.naturaOrganizzazione')}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.naturaOrganizzazione')}__]?.modificatoInIntegrazione == true and
+			              				checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_dal_provider}"></div>
 		                    	</div>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
@@ -587,6 +601,8 @@
 			              			<div th:text="${providerWrapper.provider.noProfit ? #messages.msg('label.sì') : #messages.msg('label.no')}"></div>
 			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}__]?.modificatoInIntegrazione == false and
 			              				providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}__]?.enabled == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.non_integrato_dal_provider}"></div>
+			              			<div th:if="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}__]?.modificatoInIntegrazione == true and
+			              				checkIfAccreditamentoChanged == true}" class="fa fa-exclamation-circle orange big-icon" th:title="#{label.cambiato_dal_provider}"></div>
 		                    	</div>
 		                    	<div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
 									<div class="radio">
