--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -330,6 +330,7 @@
 									di tutto l'accreditamento</h4>
 								<button type="button" class="btn btn-primary pull-right with-margin-top toggleButtons" th:text="#{label.apri_tutte}" onclick="openAll()"></button>
 								<button type="button" class="btn btn-primary pull-right with-margin-top toggleButtons" style="display: none" th:text="#{label.chiudi_tutte}" onclick="closeAll()"></button>
+								<a class="btn btn-primary pull-right with-margin-top" th:text="#{label.esporta_pdf}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/riepilogo/domanda/pdf|}"></a>
 							</div>
 							<div class="modal-body">
 
